codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:

  >_ UkisAI Code (v<VERSION>)
     loading
  Resuming session…

› draft while loading


after:

  >_ UkisAI Code (v<VERSION>)
     loading


› draft while loading


---
fork lookup fallback:
before:

  >_ UkisAI Code (v<VERSION>)
     loading
  Forking session…

› draft while loading


after:

  >_ UkisAI Code (v<VERSION>)
     loading


› draft while loading


---
resume picker cancellation:
before:
hidden while picker owns input
after:

  >_ UkisAI Code (v<VERSION>)
     loading


› Ask Codex to do anything

  ? for shortcuts
---
fork picker cancellation:
before:
hidden while picker owns input
after:

  >_ UkisAI Code (v<VERSION>)
     loading


› Ask Codex to do anything

  ? for shortcuts
